--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ishare.js",
+  "name": "5stars",
   "version": "1.0.0",
   "dependencies": {
     "ajv": "^6.10.2",
@@ -13,6 +13,17 @@
     "request-promise": "^4.2.5",
     "svgo": "^1.3.2"
   },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "bin": {
     "5stars": "./lib/index.js"
   },
@@ -23,6 +34,8 @@
     "lib"
   ],
   "devDependencies": {
-    "eslint": "^6.7.2"
+    "eslint": "^6.7.2",
+    "husky": "^3.1.0",
+    "lint-staged": "^9.5.0"
   }
 }
